--- a/DiandianIOS/DiandianIOS/DAMyBackOrderViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyBackOrderViewController.xib
@@ -35,6 +35,9 @@
                     <state key="normal" title="下单" backgroundImage="top_bg3.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="onPutDoneTouched:" destination="-1" eventType="touchUpInside" id="3EQ-Ew-RC5"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
